--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -5,10 +5,10 @@ security:
     # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
     providers:
         # used to reload user from session & other features (e.g. switch_user)
-        app_user_provider:
+       app_user_provider:
             entity:
-                class: App\Entity\Participant
-                property: email
+               class: App\Entity\Participant
+               #property: email
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
