--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -22,6 +22,9 @@ security:
                 enable_csrf: true
             logout:
                 path: app_logout
+            remember_me:
+                secret: '%kernel.secret%' # required
+                lifetime: 604800 # 1 week in seconds
                 # where to redirect after logout
                 # target: app_any_route
 
