--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,6 @@
 ###< symfony/asset-mapper ###
 
 .idea
+migrations/Version20240827083311.php
+migrations/Version20240827083311.php
+migrations/Version20240827122347.php
