Ajout CRUD User

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@
 migrations/Version20240827083311.php
 migrations/Version20240827083311.php
 migrations/Version20240827122347.php
+migrations/Version20240827083311.php
