--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,5 @@ migrations/Version20240827083311.php
 migrations/Version20240827083311.php
 migrations/Version20240827122347.php
 migrations/Version20240827083311.php
+migrations/Version20240827083311.php
+/migrations
