Ajout des requêtes sql dans villes fixtures

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,5 @@ migrations/Version20240827122347.php
 migrations/Version20240827083311.php
 migrations/Version20240827083311.php
 /migrations
+migrations/Version20240827083311.php
+migrations/Version20240827083311.php
