--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -37,8 +37,11 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/administration/participant/edit, roles: [ ROLE_USER, ROLE_ADMIN ] }
+        - { path: ^/administration/participant/delete, roles: [ ROLE_USER, ROLE_ADMIN ] }
+        - { path: ^/administration, roles: ROLE_ADMIN }
+        - { path: ^/participant, roles: ROLE_USER }
+
 
 when@test:
     security:
