--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -12,16 +12,19 @@ security:
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
+
             security: false
         main:
             lazy: true
             provider: app_user_provider
+            user_checker: App\Security\UserChecker
             form_login:
                 login_path: app_login
                 check_path: app_login
                 enable_csrf: true
             logout:
                 path: app_logout
+                target: app_login
             remember_me:
                 secret: '%kernel.secret%' # required
                 lifetime: 604800 # 1 week in seconds
@@ -36,11 +39,21 @@ security:
 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
+    # Contrôle d'accès
     access_control:
+
         - { path: ^/administration/participant/edit, roles: [ ROLE_USER, ROLE_ADMIN ] }
-        - { path: ^/administration/participant/delete, roles: [ ROLE_USER, ROLE_ADMIN ] }
+        - { path: ^/administration/participant/delete, roles: [ ROLE_ADMIN ] }
         - { path: ^/administration, roles: ROLE_ADMIN }
-        - { path: ^/participant, roles: ROLE_USER }
+        - { path: ^/sorties, roles: ROLE_USER }
+        - { path: ^/home, roles: ROLE_USER }
+
+
+
+
+    # Configuration des rôles hiérarchiques (optionnelle)
+    role_hierarchy:
+        ROLE_ADMIN: ROLE_USER
 
 
 when@test:
