--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -3,3 +3,6 @@ controllers:
         path: ../src/Controller/
         namespace: App\Controller
     type: attribute
+redirect_to_home:
+    path: /
+    controller: App\Controller\HomeController::redirectToHome
