--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,7 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
+    timezone: '%env(APP_TIMEZONE)%'
 
 services:
     # default configuration for services in *this* file
@@ -28,3 +29,4 @@ services:
             $etatsRepository: '@App\Repository\EtatsRepository'
         tags:
             - {name: 'doctrine.orm.entity_listener', event: 'prePersist', entity: 'App\Entity\Sorties', method: 'defaultStatus'}
+
