import des participants a partir d'un csv file

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,9 @@ migrations/Version20240827083311.php
 /migrations
 migrations/Version20240827083311.php
 migrations/Version20240827083311.php
+public/uploads/photos/66d18d8edb16e.png
+public/uploads/photos/66d17d439153a.png
+public/uploads/photos/66d17bb1806d8.jpg
+public/uploads/photos/66d17afcd72ad.jpg
+public/uploads/csv/users_import_66d1b9ec1cb34.txt
+public/uploads/csv/users_import_66d1b61b07e14.txt
