--- a/config/services.yaml
+++ b/config/services.yaml
@@ -6,6 +6,7 @@
 parameters:
     timezone: '%env(APP_TIMEZONE)%'
     photos_directory: '%kernel.project_dir%/public/uploads/photos'
+    csv_directory: '%kernel.project_dir%/public/uploads/csv'
 
 services:
     # default configuration for services in *this* file
