Annulation des sorties

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,6 @@ public/uploads/photos/66d17bb1806d8.jpg
 public/uploads/photos/66d17afcd72ad.jpg
 public/uploads/csv/users_import_66d1b9ec1cb34.txt
 public/uploads/csv/users_import_66d1b61b07e14.txt
+public/uploads/csv/users_import_66d1bc1b5349d.txt
+public/uploads/photos/66d18f70f389a.jpg
+public/uploads/photos/66d1b9df1ac50.jpg
